# mlip-training-workshop

./: .gitignore  README.md  pyproject.toml
data/: download_mad.sh  ethanol_subset.xyz  fetch_water.sh  make_ethanol_toy.py  split_xyz.py
scripts/: profile_pet.py  sbatch_mace_mad.sh  sbatch_pet_mad.sh  sbatch_template.sh
slides/: workshop1.tex
workshop1/: README.md  __init__.py  calculator.py  compare_models.py  data_efficiency.py  frames.py  md.py  md_compare.py  model.py  train.py  vibrations.py
workshop1/models/: __init__.py  bonded_ff.py  mace.py  pair_morse.py  pet.py
workshop2/: README.md  __init__.py  run.py
workshop2/configs/: README.md  _template.yaml  _template_pet.yaml  smoke_ethanol_mace.yaml  smoke_ethanol_pet.yaml
workshop2/evaluate/: README.md  ase_sanity.py  calculator.py  holdout_rmse.py  openmm_md.py
workshop2/examples/: README.md  mace_mad.yaml  pet_mad.yaml
