[project]
name = "mlip-training"
version = "0.1.0"
description = "Two-workshop guide to training machine-learning interatomic potentials with MACE and PET."
requires-python = ">=3.11"
dependencies = [
    # Core training stack. Everything else (ase, matplotlib, numpy, e3nn,
    # pyyaml, metatensor/metatomic/metatrain, omegaconf, scipy, vesin)
    # comes in transitively via these two.
    "mace-torch",
    "upet",
    # Permissive lower bound on torch so site-specific wheels (CUDA, ROCm)
    # can satisfy the constraint with whatever recent version is available.
    "torch>=2.7.1",
]

[tool.uv]
# Treat this repo as a deps-only project — no build, no install of the
# `workshop1`/`workshop2` packages themselves. `uv sync` should populate
# `.venv` with the dependencies; run the workshop code with
# `python -m workshop1.<module>` from the repo root.
package = false
