[project]
name = "mlip-training"
version = "0.1.0"
description = "Two-workshop guide to training machine-learning interatomic potentials with MACE and PET."
requires-python = ">=3.11"
dependencies = [
    # Core training stack. Everything else (ase, matplotlib, numpy, e3nn,
    # pyyaml, metatensor/metatomic/metatrain, omegaconf, scipy, vesin)
    # comes in transitively via these two.
    "mace-torch",
    "upet",
    # Permissive lower bound on torch so a site-specific wheel (CPU, CUDA,
    # ROCm) installed *first* satisfies the constraint. See the README:
    # torch is installed in a separate step from the right PyTorch index,
    # because its GPU wheels are too platform-narrow for a single resolve.
    "torch>=2.7.1",
    "openmm",
    "openmmml",
]

[tool.uv]
# Treat this repo as a deps-only project — no build, no install of the
# `workshop1`/`workshop2` packages themselves.
package = false
